# breast-classification-onboarding

./: .gitignore  Dockerfile  client.py  pyproject.toml  serve.py
notebooks/: explore-data.ipynb
